--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h1>Test Page</h1>
-    <br>
-    <br> 
-    <br> 
-
     <!-- https://codepen.io/t_afif/pen/qBJyXNy -->
     <!-- the type of image is important for the illusion 
    use an image having the main element in the center and a uniform background
@@ -54,7 +49,7 @@
   <!-- First Parallax Image with Logo Text -->
   <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
     <div class="w3-display-middle" style="white-space:nowrap;">
-      <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">WEBSITE</span> LOGO</span>
+      <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">DIGITAL <span class="w3-hide-small">SUNSET</span> STUDIOS</span>
     </div>
   </div>
   
