--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-  <span>Company Name</span>
+<header class="w3-container w3-top w3-hide-large w3-blue w3-xlarge w3-padding">
+  <a href="javascript:void(0)" class="w3-button w3-blue w3-margin-right" onclick="w3_open()">☰</a>
+  <span>Digital Sunset Studios</span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -40,7 +40,7 @@
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo"><b>Interior Design</b></h1>
+    <h1 class="w3-jumbo"><b>VR Development</b></h1>
     <h1 class="w3-xxxlarge w3-text-red"><b>Showcase.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
@@ -48,15 +48,15 @@
   <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="/w3images/kitchenconcrete.jpg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
-      <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
-      <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
+      <img src="images/DigitalSunsetLogo.png" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
+      <img src="images/DigitalSunsetLogo.png" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
+      <img src="images/DigitalSunsetLogo.png" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
     </div>
 
     <div class="w3-half">
-      <img src="/w3images/atrium.jpg" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
-      <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
-      <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design">
+      <img src="images/DigitalSunsetLogo.png" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
+      <img src="images/DigitalSunsetLogo.png" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
+      <img src="images/DigitalSunsetLogo.png" style="width:100%" onclick="onClick(this)" alt="Scandinavian design">
     </div>
   </div>
 
@@ -154,7 +154,7 @@
         
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-red w3-xlarge w3-padding-32">Pro</li>
+        <li class="w3-blue w3-xlarge w3-padding-32">Pro</li>
         <li class="w3-padding-16">Floorplanning</li>
         <li class="w3-padding-16">50 hours support</li>
         <li class="w3-padding-16">Photography</li>
@@ -165,7 +165,7 @@
           <span class="w3-opacity">per room</span>
         </li>
         <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-red w3-padding-large w3-hover-black">Sign Up</button>
+          <button class="w3-button w3-blue w3-padding-large w3-hover-black">Sign Up</button>
         </li>
       </ul>
     </div>
@@ -189,7 +189,7 @@
         <label>Message</label>
         <input class="w3-input w3-border" type="text" name="Message" required>
       </div>
-      <button type="submit" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom">Send Message</button>
+      <button type="submit" class="w3-button w3-block w3-padding-large w3-blue w3-margin-bottom">Send Message</button>
     </form>  
   </div>
 
