--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Template</title>
+    <title>Digital Sunset Studios</title>
     
     <link rel="stylesheet" href="styles.css">
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
@@ -43,7 +43,7 @@
       <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
       <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
       <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-      <a href="#" class="w3-bar-item w3-button">SEARCH</a>
+      <!-- <a href="#" class="w3-bar-item w3-button">SEARCH</a> -->
     </div>
   </div>
   
@@ -73,9 +73,14 @@
 <p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
       </div>
     </div>
-    <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
+    <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
     <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
-    <div class="w3-light-grey">
+    <div class="animImgDiv">
+      <img src="https://picsum.photos/id/669/300/300" alt="the back of random person">
+  <img src="https://assets.codepen.io/1480814/pexels-pixabay-62655.jpg" alt="an eagle" style="--f:.12;--r:5px">
+  <img src="https://picsum.photos/id/326/300/300" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:20px">
+    </div>
+    <!-- <div class="w3-light-grey">
       <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
     </div>
     <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
@@ -85,7 +90,7 @@
     <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
     <div class="w3-light-grey">
       <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-    </div>
+    </div> -->
   </div>
   
   <div class="w3-row w3-center w3-dark-grey w3-padding-16">
