--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
           Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
-        <p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
+    <p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
       </div>
     </div>
     <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
     <!-- <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p> -->
     <div class="animImgDiv">
-      <img src="images\VR_Driving.png" alt="the back of random person">
-  <img src="images\fishTank1.png" alt="an eagle" style="--f:.12;--r:5px">
-  <img src="images\xrTerra2.png" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:20px">
+      <img src="images\VR_Driving.png" alt="the back of random person" class="imgAnim">
+  <img src="images\fishTank1.png" alt="an eagle" style="--f:.12;--r:5px" class="imgAnim">
+  <img src="images\xrTerra2.png" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:20px" class="imgAnim">
     </div>
     <!-- <div class="w3-light-grey">
       <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
