--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <!-- <a href="#" class="w3-bar-item w3-button">SEARCH</a> -->
     </div>
   </div>
+
+
   
   <!-- First Parallax Image with Logo Text -->
   <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
@@ -53,6 +55,8 @@
       <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL <span class="w3-hide-small">SUNSET</span> STUDIOS</span>
     </div>
   </div>
+
+
   
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
@@ -74,12 +78,13 @@
       </div>
     </div>
     <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
-    <!-- <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p> -->
     <div class="animImgDiv">
-      <img src="images\VR_Driving.png" alt="the back of random person" class="imgAnim">
-  <img src="images\fishTank1.png" alt="an eagle" style="--f:.12;--r:5px" class="imgAnim">
-  <img src="images\xrTerra2.png" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:20px" class="imgAnim">
+      <img src="images\VR_Driving.png" alt="the back of random person" style="--f:.12;--r:100%" class="imgAnim">
+      <img src="images\fishTank1.png" alt="an eagle" style="--f:.12;--r:100%" class="imgAnim">
+      <img src="images\xrTerra2.png" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:100%" class="imgAnim">
     </div>
+    <!-- <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p> -->
+
     <!-- <div class="w3-light-grey">
       <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
     </div>
