--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,6 @@
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center">Example Projects</h3>
     <p class="w3-center"><em>Fish Tank VR</em></p>
-    <p>Welcome to the future of virtual reality! At Digital Sunset Studios, we are a cutting-edge VR software company dedicated to revolutionizing the way people experience immersive digital 
-      environments. By leveraging the latest advancements in technology, we bring virtual worlds to life, empowering individuals and businesses to explore limitless possibilities in a virtual realm.</p>
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
@@ -61,7 +59,6 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
           Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
-    <p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
       </div>
     </div>
 
@@ -95,12 +92,24 @@
   </div>
 </div>
 
-  <!-- Third Parallax Image with Portfolio Text -->
-  <div class="bgimg-3 w3-display-container w3-opacity-min">
-    <div class="w3-display-middle">
-      <span class="w3-xxlarge w3-text-white w3-wide">VR Drivin'</span>
-    </div>
+<div class="w3-row w3-center w3-dark-grey w3-padding-16">
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">14+</span><br>
+    Partners
   </div>
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">55+</span><br>
+    Projects Done
+  </div>
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">89+</span><br>
+    Happy Clients
+  </div>
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">150+</span><br>
+    Meetings
+  </div>
+</div>
   
   <!-- Container (VR Drivin Section) -->
   <div class="w3-content w3-container w3-padding-64" id="portfolio">
