--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,12 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+        <video width="400" height="400" poster="images/fishTank1.png" controls>
+          <source src="images/aquariumVR.mp4" type="video/mp4">
+          <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+        </video>
+        <!-- <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
       </div>
   
       <!-- Hide this text on small devices -->
@@ -118,12 +123,16 @@
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
           <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-          <img src="images/VR_Driving.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+          <!-- <img src="images/VR_Driving.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
+          <video width="400" height="400" poster="images/VR_Driving.png" controls>
+            <source src="images/vrDrivin.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
     
           <!-- Hide this text on small devices -->
           <div class="w3-col m6 w3-hide-small w3-padding-large">
-            <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
+            <p> VR Drivin' info Here.... At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
               Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
         <p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
           </div>
