--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/DigitalSunsetLogo.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+        <img src="images/DigitalSunsetLogo.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
       </div>
   
       <!-- Hide this text on small devices -->
@@ -79,10 +79,14 @@
     </div>
     <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
     <div class="animImgDiv">
-      <img src="images\VR_Driving.png" alt="the back of random person" style="--f:.12;--r:100%" class="imgAnim">
-      <img src="images\fishTank1.png" alt="an eagle" style="--f:.12;--r:100%" class="imgAnim">
-      <img src="images\xrTerra2.png" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:100%" class="imgAnim">
+      <!-- <img src="images\VR_Driving.png" alt="the back of random person" style="--f:.12;--r:100%" class="imgAnim"> -->
+      <!-- <img src="images\fishTank1.png" alt="an eagle" style="--f:.12;--r:100%" class="imgAnim">
+      <img src="images\xrTerra2.png" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:100%" class="imgAnim"> -->
+      <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:100%" class="imgAnim"></a>
+      <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:100%" class="imgAnim"></a>
+      <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:100%" class="imgAnim"></a>
     </div>
+
     <!-- <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p> -->
 
     <!-- <div class="w3-light-grey">
