--- a/about.html
+++ b/about.html
@@ -39,7 +39,12 @@
     </div>
   </div>
   
-
+  <!-- First Parallax Image with Logo Text -->
+  <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+    <div class="w3-display-middle" style="white-space:nowrap;">
+      <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">ABOUT <span class="w3-hide-small">US</span>.</span>
+    </div>
+  </div>
   
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64" id="about">
@@ -57,37 +62,22 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
           Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
-<p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
+        <p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
       </div>
     </div>
-    <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
-    <!-- <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p> -->
-    <div class="animImgDiv">
-      <img src="images\VR_Driving.png" alt="the back of random person">
-  <img src="images\fishTank1.png" alt="an eagle" style="--f:.12;--r:5px">
-  <img src="images\xrTerra2.png" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:20px">
-    </div>
-  </div>
-  
-  <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-    <div class="w3-quarter w3-section">
-      <span class="w3-xlarge">14+</span><br>
-      Partners
-    </div>
-    <div class="w3-quarter w3-section">
-      <span class="w3-xlarge">55+</span><br>
-      Projects Done
-    </div>
-    <div class="w3-quarter w3-section">
-      <span class="w3-xlarge">89+</span><br>
-      Happy Clients
-    </div>
-    <div class="w3-quarter w3-section">
-      <span class="w3-xlarge">150+</span><br>
-      Meetings
-    </div>
-  </div>
- 
+
+
+      <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
+      <div class="animImgDiv">
+        <!-- <img src="images\VR_Driving.png" alt="the back of random person" style="--f:.12;--r:100%" class="imgAnim"> -->
+        <!-- <img src="images\fishTank1.png" alt="an eagle" style="--f:.12;--r:100%" class="imgAnim">
+        <img src="images\xrTerra2.png" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:100%" class="imgAnim"> -->
+        <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:100%" class="imgAnim"></a>
+        <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:100%" class="imgAnim"></a>
+        <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:100%" class="imgAnim"></a>
+
+      </div>
+
   </div>
   
   <!-- Footer -->
