--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,10 @@
   
   
   
-  
-  <!-- Third Parallax Image with Portfolio Text -->
-  <div class="bgimg-3 w3-display-container w3-opacity-min">
-    <div class="w3-display-middle">
-       <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
+  <!-- First Parallax Image with Logo Text -->
+  <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+    <div class="w3-display-middle" style="white-space:nowrap;">
+      <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">CONTACT <span class="w3-hide-small">US</span>.</span>
     </div>
   </div>
   
