--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,12 @@
     </div>
   </div>
   
-
+  <!-- First Parallax Image with Logo Text -->
+  <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+    <div class="w3-display-middle" style="white-space:nowrap;">
+      <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">PORTFOLIO <span class="w3-hide-small"></span></span>
+    </div>
+  </div>
 
 
   <!-- Container (FISH TANK VR) -->
