--- a/education.html
+++ b/education.html
@@ -67,6 +67,7 @@
   
       <!-- Hide this text on small devices -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
+        <h5>Augmented Reality 101</h5>
         <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
           Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
       </div>
