--- a/about.html
+++ b/about.html
@@ -84,14 +84,12 @@
   <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
     <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
     <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
+      <a class="w3-hover-opacity" href="https://bloghoskins.blogspot.com/"> <img src="images/bloggerIcon.png" width="20.58" height="24"></a>
+      <a class="w3-hover-opacity" href="https://github.com/gary909"> <img src="images/github-mark-white.svg" width="23" height="23"></a>
+      <a class="w3-hover-opacity" href="https://www.codewars.com/users/gary909"> <img src="images/codewars_icon.png" width="23" height="23"></a>
+      <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/gary-white-3a779a51/"></a>
+
     </div>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   </footer>
   <script src="app.js"></script>
 </body>
