to the top break working

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,11 @@
     </div>
   </div>
 
-  <br>
-  <br>
+  <div id="home"><br><br></div>
+
   
   <!-- First Parallax Image with Logo Text -->
-  <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+  <div class="bgimg-1 w3-display-container w3-opacity-min" >
     <div class="w3-display-middle" style="white-space:nowrap;">
       <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">PORTFOLIO <span class="w3-hide-small"></span></span>
     </div>
@@ -100,23 +100,9 @@
       </div>
     </div>
 
+    <!-- Grey Seperator Line-->
     <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">14+</span><br>
-        Partners
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">55+</span><br>
-        Projects Done
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">89+</span><br>
-        Happy Clients
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">150+</span><br>
-        Meetings
-      </div>
+
     </div>
   
       <!-- Container (VR Drivin Section) -->
@@ -174,23 +160,9 @@
         </div>
       </div>
 
+      <!-- Grey Seperator Line-->
       <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-        <div class="w3-quarter w3-section">
-          <span class="w3-xlarge">14+</span><br>
-          Partners
-        </div>
-        <div class="w3-quarter w3-section">
-          <span class="w3-xlarge">55+</span><br>
-          Projects Done
-        </div>
-        <div class="w3-quarter w3-section">
-          <span class="w3-xlarge">89+</span><br>
-          Happy Clients
-        </div>
-        <div class="w3-quarter w3-section">
-          <span class="w3-xlarge">150+</span><br>
-          Meetings
-        </div>
+
       </div>
 
 
