--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
     </div>
   </div>
 
-  <br>
-  <br>
+  <div id="home"><br><br></div>
   
   <!-- First Parallax Image with Logo Text -->
-  <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+  <div class="bgimg-1 w3-display-container w3-opacity-min">
     <div class="w3-display-middle" style="white-space:nowrap;">
       <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL <span class="w3-hide-small">SUNSET</span> STUDIOS</span>
     </div>
