flexbox to homepage images

--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
       <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:3%" class="imgAnim"></a>
     </div>
 
+    <div class="flex-container">
+      <div>
+        <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:3%" class="imgAnim"></a>
+      </div>
+      <div>
+        <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:3%" class="imgAnim"></a>
+      </div>
+      <div>
+        <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:3%" class="imgAnim"></a>
+      </div>  
+    </div>
+
     <!-- <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p> -->
 
     <!-- <div class="w3-light-grey">
