--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
       </div>
     </div>
-    <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
+    <p class="w3-large w3-center w3-padding-16">Some Project Examples</p>
     <div class="animImgDiv">
       <div class="flex-container">
         <div>
