--- a/portfolio.html
+++ b/portfolio.html
@@ -43,14 +43,14 @@
   <!-- First Parallax Image with Logo Text -->
   <div class="bgimg-1 w3-display-container w3-opacity-min" >
     <div class="w3-display-middle" style="white-space:nowrap;">
-      <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">PORTFOLIO <span class="w3-hide-small"></span></span>
+      <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">Example Projects<span class="w3-hide-small"></span></span>
     </div>
   </div>
 
 
   <!-- Container (FISH TANK VR) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-    <h3 class="w3-center">Example Projects</h3>
+    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Fish Tank VR</h3>
     <p class="w3-center"><em>Fish Tank VR</em></p>
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
@@ -101,13 +101,14 @@
     </div>
 
     <!-- Grey Seperator Line-->
-    <div class="w3-row w3-center w3-dark-grey w3-padding-16">
+    <!-- <div class="w3-row w3-center w3-dark-grey w3-padding-16"> -->
 
     </div>
   
       <!-- Container (VR Drivin Section) -->
       <div class="w3-content w3-container w3-padding-64" id="portfolio">
-        <h3 class="w3-center">VR Drivin'</h3>
+        <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">VR Drivin'</h3>
+        <!-- <h3 class="w3-center">VR Drivin'</h3> -->
         <p class="w3-center"><em>A Fan remake of the 80's Classic driving Game<br>
     
 
@@ -161,7 +162,7 @@
       </div>
 
       <!-- Grey Seperator Line-->
-      <div class="w3-row w3-center w3-dark-grey w3-padding-16">
+      <!-- <div class="w3-row w3-center w3-dark-grey w3-padding-16"> -->
 
       </div>
 
@@ -169,7 +170,8 @@
 
     <!-- Container (About Section) -->
     <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-      <h3 class="w3-center">Example Projects</h3>
+      <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">XR Terra Classwork</h3>
+      <!-- <h3 class="w3-center">Example Projects</h3> -->
       <p class="w3-center"><em>XR Terra Classwork</em></p>
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
