--- a/education.html
+++ b/education.html
@@ -43,7 +43,7 @@
   <!-- First Parallax Image with Logo Text -->
   <div class="bgimg-1 w3-display-container w3-opacity-min" >
     <div class="w3-display-middle" style="white-space:nowrap;">
-      <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL<br><span class="w3-hide-small">SUNSET</span> STUDIOS</span>
+      <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">EDUCATION</span>
     </div>
   </div>
 
@@ -76,11 +76,12 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/XR_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
       </div>
   
       <!-- Hide this text on small devices -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
+        <h5>Discover the XR Interaction Toolkit for VR</h5>
         <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
           Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
       </div>
