--- a/education.html
+++ b/education.html
@@ -59,6 +59,9 @@
     </p>
 
 
+
+
+    <!-- Cert - Augmented Reality 101 -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
@@ -68,65 +71,93 @@
       <!-- Hide this text on small devices -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h5>Augmented Reality 101</h5>
-        <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
-          Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
+        <h6>June 2023</h6>
+        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
       </div>
     </div>
     <br>
+
+
+
+
+
+    <!-- Cert - Discover the XR Interaction Toolkit for VR -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
         <img src="images/XR_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small devices -->
+      <!-- Hide this text on small devices - Discover the XR Interaction Toolkit for VR -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h5>Discover the XR Interaction Toolkit for VR</h5>
-        <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
-          Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
-      </div>
+        <h6>February 2023</h6>
+        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+       </div>
     </div>
     <br>
+
+
+
+
+
+    <!-- Cert - Create Your First 3D Game in Unity -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/3dSpiel_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small devices -->
+      <!-- Hide this text on small devices - Cert - Create Your First 3D Game in Unity  -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
-          Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
-      </div>
+        <h5>Create Your First 3D Game in Unity</h5>
+        <h6>January 2023</h6>
+        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+       </div>
     </div>
     <br>
+
+
+
+
+    <!-- Cert - "Unity Mini-Projects - C# Fundamentals"s -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/C_Sharp_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small devices -->
+      <!-- Hide this text on small device - Cert - "Unity Mini-Projects - C# Fundamentals"s -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
-          Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
-      </div>
-    </div>
-    <br>
-    <div class="w3-row">
-      <div class="w3-col m6 w3-center w3-padding-large">
-        <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
-      </div>
-  
-      <!-- Hide this text on small devices -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
-          Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
+        <h5>Unity Mini-Projects - C# Fundamentals</h5>
+        <h6>January 2023</h6>
+        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
       </div>
     </div>
     <br>
 
+
+
+
+    <!-- Cert Name here -->
+    <div class="w3-row">
+      <div class="w3-col m6 w3-center w3-padding-large">
+        <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
+        <img src="images/DigitalSunsetLogo.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+      </div>
+  
+      <!-- Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-hide-small w3-padding-large">
+        <h5>Unity Mini-Projects - C# Fundamentals</h5>
+        <h6>January 2023</h6>
+        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+      </div>
+    </div>
+    <br>
+
+
+
+    
     <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
     <div class="animImgDiv">
       <!-- <img src="images\VR_Driving.png" alt="the back of random person" style="--f:.12;--r:100%" class="imgAnim"> -->
