--- a/education.html
+++ b/education.html
@@ -114,7 +114,21 @@
     <br>
 
 
-
+    <!-- Cert --- The complete 2023 Web Dev Bootcamp -->
+    <div class="w3-row">
+      <div class="w3-col m6 w3-center w3-padding-large">
+        <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
+        <img src="images/CompWebDevCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+      </div>
+  
+      <!-- Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-hide-small w3-padding-large">
+        <h5>The complete 2023 Web Dev Bootcamp</h5>
+        <h6>January 2023</h6>
+        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+      </div>
+    </div>
+    <br>
 
 
     <!-- Cert - Create Your First 3D Game in Unity -->
@@ -133,6 +147,23 @@
     </div>
     <br>
 
+
+
+    <!-- Cert --- Learn the Entire Affinity Suite -->
+    <div class="w3-row">
+      <div class="w3-col m6 w3-center w3-padding-large">
+        <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
+        <img src="images/AffinityCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+      </div>
+  
+      <!-- Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-hide-small w3-padding-large">
+        <h5>Learn the Entire Affinity Suite: Photo, Designer & Publisher</h5>
+        <h6>January 2023</h6>
+        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+      </div>
+    </div>
+    <br>
 
 
 
@@ -161,21 +192,7 @@
 
 
 
-    <!-- Cert Name here -->
-    <div class="w3-row">
-      <div class="w3-col m6 w3-center w3-padding-large">
-        <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/DigitalSunsetLogo.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
-      </div>
-  
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <h5>Unity Mini-Projects - C# Fundamentals</h5>
-        <h6>January 2023</h6>
-        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
-      </div>
-    </div>
-    <br>
+
 
 
 
