--- a/education.html
+++ b/education.html
@@ -51,15 +51,13 @@
   
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-    <h3 class="w3-center">ABOUT US</h3>
-    <p class="w3-center"><em>We Love VR</em></p>
-    <p>Here is a list of Certificates & Qualifications: blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah
-      blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah
-      blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah
+    <h3 class="w3-center">Certificates & Qualifications</h3>
+    <!-- <p class="w3-center"><em>We Love VR</em></p> -->
+    <p>Here is a list of some of my Certificates & Qualifications:
     </p>
 
 
-
+    <br>
 
     <!-- Cert - Augmented Reality 101 -->
     <div class="w3-row">
@@ -72,12 +70,19 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h5>Augmented Reality 101</h5>
         <h6>June 2023</h6>
-        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+        <ul>
+          <li>Configure AR Foundation within Unity</li>
+          <li>Use your camera to detect planes</li>
+          <li>Create placement indicators to define positions</li>
+          <li>Implement tap gestures to spawn objects</li>
+          <li>Build your AR app to Android and iOS</li>
+        </ul>
+        <a href="https://academy.zenva.com/product/augmented-reality-101-working-with-ar-foundation/" target=”_blank”>Link To AR 101 Course Page</a>
       </div>
     </div>
     <br>
 
-
+    <br>
 
     <!-- Cert --- Intro to Particle Systems for Games -->
     <div class="w3-row">
@@ -90,7 +95,13 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h5>Intro to Particle Systems for Games</h5>
         <h6>June 2023</h6>
-        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          <ul>
+            <li>Add particles to your scene</li>
+            <li>Change particle shape and colors</li>
+            <li>Control particle timings and amounts</li>
+            <li>Manipulate particle animations</li>
+          </ul>
+        <a href="https://academy.zenva.com/product/augmented-reality-101-working-with-ar-foundation/" target=”_blank”>Link To Particle Systems Course Page</a>
       </div>
     </div>
     <br>    
