--- a/education.html
+++ b/education.html
@@ -53,8 +53,7 @@
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center">Certificates & Qualifications</h3>
     <!-- <p class="w3-center"><em>We Love VR</em></p> -->
-    <p>Here is a list of some of my Certificates & Qualifications:
-    </p>
+    <!-- <p>Here is a list of some of my Certificates & Qualifications:</p> -->
 
 
     <br>
