--- a/education.html
+++ b/education.html
@@ -117,7 +117,13 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h5>XR Foundations Developer</h5>
         <h6>March 2023</h6>
-        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+        <ul>
+          <li>4 Week Online Course</li>
+          <li>Unity, C#, and VR toolkits and libraries</li>
+          <li>VR interactions and locomotion</li>
+          <li>Animations, Character controllers, and movement</li>
+        </ul>
+        <a href="https://www.xrterra.com/vr-developer-foundations/" target=”_blank”>Link To XR Terra Course Page</a>
       </div>
     </div>
     <br>    
@@ -135,7 +141,14 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h5>Discover the XR Interaction Toolkit for VR</h5>
         <h6>February 2023</h6>
-        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+        <ul>
+          <li>Set up the XR Interaction Toolkit</li>
+          <li>Create interactable objects</li>
+          <li>Implement teleportation-style movement</li>
+          <li>Deal with hand grabbing controllers</li>
+          <li>Add particle effects based on object orientation</li>
+        </ul>
+        <a href="https://academy.zenva.com/product/discover-the-xr-interaction-toolkit-for-vr/" target=”_blank”>Link To XR Interaction Toolkit Course Page</a>
        </div>
     </div>
     <br>
