--- a/education.html
+++ b/education.html
@@ -172,7 +172,7 @@
           <li>DOM, jQuery, Command Line, Github</li>
           <li>Node.js, React.js</li>
         </ul>
-        <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target=”_blank”>Link To The complete 2023 Web Dev Bootcamp Course Page</a>
+        <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target=”_blank”>Link To The complete 2023 Web Dev Bootcamp Course</a>
       </div>
     </div>
     <br>
@@ -196,7 +196,7 @@
           <li>Control game over triggers</li>
           <li>Build a UI</li>
         </ul>
-        <a href="https://academy.zenva.com/product/create-your-first-3d-game-in-unity/" target=”_blank”>Link To Create Your First 3D Game in Unity Course Page</a>
+        <a href="https://academy.zenva.com/product/create-your-first-3d-game-in-unity/" target=”_blank”>Link To Create Your First 3D Game in Unity Course</a>
        </div>
     </div>
     <br>
@@ -219,7 +219,7 @@
           <li>Convert screen touches to world coordinates</li>
           <li>Build games for Android & iOS</li>
         </ul>
-        <a href="https://academy.zenva.com/product/intro-to-mobile-game-development/" target=”_blank”>Link To Mobile Game Development for Beginners Course Page</a>
+        <a href="https://academy.zenva.com/product/intro-to-mobile-game-development/" target=”_blank”>Link To Mobile Game Development for Beginners Course</a>
       </div>
     </div>
     <br>  
@@ -236,7 +236,13 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h5>Learn the Entire Affinity Suite: Photo, Designer & Publisher</h5>
         <h6>January 2023</h6>
-        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+        <ul>
+          <li>Master Affinity Designer, Photo, & Publisher</li>
+          <li>Use vector tools to create logos, icons & graphics</li>
+          <li>Export and work with digital and print files</li>
+          <li>layout, color, working with fonts, type, mastering Grids</li>
+        </ul>
+        <a href="https://www.udemy.com/course/learn-the-entire-affinity-suite-photo-designer-publisher/" target=”_blank”>Link To Learn the Entire Affinity Suite Course</a>
       </div>
     </div>
     <br>
