--- a/education.html
+++ b/education.html
@@ -287,7 +287,9 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h5>Data Privacy Training Basic</h5>
         <h6>Sept 2022</h6>
-        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+        <p>Corporate Privacy Training</p>
+        <a href="https://www.datenschutzexperte.de/lp/datenschutzsoftware/?utm_campaign=DACH_CNV_brand&utm_source=google&utm_medium=cpc&utm_content=538006938213&utm_term=proliance%20360&utm_campaign=DACH_CNV_brand&utm_source=google&utm_medium=cpc&utm_content=538006938213&utm_term=proliance%20360&gad=1&gclid=Cj0KCQjwzdOlBhCNARIsAPMwjbwtiWYh8A6iWb-jDNCr2mJxYCttAK4Fz_E4J01lTg1Yc6mLTjwfG0UaAsRAEALw_wcB" target=”_blank”>Link To Company Website</a>
+       
       </div>
     </div>
     <br>
