--- a/about.html
+++ b/about.html
@@ -53,8 +53,9 @@
   <div class="w3-content w3-container w3-padding-64" id="about">
     <h3 class="w3-center">ABOUT US</h3>
     <p class="w3-center"><em>We Love VR</em></p>
-    <p>Welcome to the future of virtual reality! At Digital Sunset Studios, we are a cutting-edge VR software company dedicated to revolutionizing the way people experience immersive digital 
-      environments. By leveraging the latest advancements in technology, we bring virtual worlds to life, empowering individuals and businesses to explore limitless possibilities in a virtual realm.</p>
+    <p>By day a web developer, but at night I put on my glasses and become a VR Developer!  Purely a passion project, Digital Sunset Studios is the name I work under for my VR projects.
+      In 2016 I first started playing around with Google Cardboard and Unity and since then have progressed into making experiences for the Occulus Quest and Rift.
+    </p>
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
@@ -68,19 +69,31 @@
         <p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
       </div>
     </div>
+    
+    <p class="w3-center"><em>Blog</em></p>
+    <p>Follow the latest updates by reading my Blog here...</p>
+
+    <p class="w3-center"><em>GitHub</em></p>
+    <p>Check out my Github here...</p>  
+
+    <p class="w3-center"><em>CodeWars</em></p>
+    <p>Make frieds with me or view my Katas here...</p>  
+        
+    <p class="w3-center"><em>Linkedin</em></p>
+    <p>Take a look at my profile over on Linkedin...</p>      
 
 
       <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
       <div class="animImgDiv">
         <div class="flex-container">
           <div>
-            <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:3%" class="imgAnim"></a>
+            <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:1%" class="imgAnim"></a>
           </div>
           <div>
-            <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:3%" class="imgAnim"></a>
+            <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:1%" class="imgAnim"></a>
           </div>
           <div>
-            <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:3%" class="imgAnim"></a>
+            <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:1%" class="imgAnim"></a>
           </div>  
         </div>
       </div>
