--- a/education.html
+++ b/education.html
@@ -502,7 +502,7 @@
       <!-- Hide this text on small device - Cert Name here -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <br>
-        <h5>Angular Back To Front</h5>
+        <h5>Angular Front To Back</h5>
         <h6>August 2019</h6>
         <ul>
           <li>Build single page apps using Angular 5+</li>
