--- a/about.html
+++ b/about.html
@@ -77,7 +77,9 @@
     <p>Check out my Github here...</p>  
 
     <p class="w3-center"><em>CodeWars</em></p>
-    <p>Make frieds with me or view my Katas here...</p>  
+    <p>Make friends with me or view my Katas here...</p>
+    <a target="_blank" href="https://www.codewars.com/users/gary909"><img src="https://www.codewars.com/users/gary909/badges/large" alt="codewars badge large" /></a>
+    
         
     <p class="w3-center"><em>Linkedin</em></p>
     <p>Take a look at my profile over on Linkedin...</p>      
